# serializer version: 1
# name: TestClassificationOutputs.test_rf_classifier_empirical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   sepal length (cm) |   sepal width (cm) |   petal length (cm) |   petal width (cm) |
      |---:|-------------:|--------:|--------------------:|-------------------:|--------------------:|-------------------:|
      |  1 |            1 | 0.49474 |             0.12491 |            0.12802 |             0.12802 |            0.12432 |
      |  2 |            2 | 0.49474 |             0.06009 |            0.08723 |             0.17902 |            0.17892 |
      |  3 |            3 | 0.49474 |             0.15001 |           -0.05433 |             0.19011 |            0.18946 |
      |  4 |            4 | 0.49474 |            -0.16427 |            0.02958 |            -0.18028 |           -0.17977 |
      |  5 |            5 | 0.49474 |            -0.08393 |           -0.13731 |            -0.13694 |           -0.13657 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   sepal length (cm) |   sepal width (cm) |   petal length (cm) |   petal width (cm) |
      |---:|-------------:|-------:|--------------------:|-------------------:|--------------------:|-------------------:|
      |  1 |            1 |      0 |                   0 |                  0 |                   0 |                  0 |
      |  2 |            2 |      0 |                   0 |                  0 |                   0 |                  0 |
      |  3 |            3 |      0 |                   0 |                 -0 |                   0 |                  0 |
      |  4 |            4 |      0 |                  -0 |                  0 |                  -0 |                 -0 |
      |  5 |            5 |      0 |                  -0 |                 -0 |                  -0 |                 -0 |
    ''',
  })
# ---
# name: TestClassificationOutputs.test_rf_classifier_gaussian_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   sepal length (cm) |   sepal width (cm) |   petal length (cm) |   petal width (cm) |
      |---:|-------------:|--------:|--------------------:|-------------------:|--------------------:|-------------------:|
      |  1 |            1 | 0.49474 |             0.11929 |            0.07889 |             0.15373 |            0.15335 |
      |  2 |            2 | 0.49474 |             0.03342 |            0.14073 |             0.16551 |            0.16561 |
      |  3 |            3 | 0.49474 |             0.11127 |           -0.01756 |             0.19057 |            0.19098 |
      |  4 |            4 | 0.49474 |            -0.13491 |            0.02352 |            -0.19315 |           -0.1902  |
      |  5 |            5 | 0.49474 |            -0.06938 |           -0.1061  |            -0.16301 |           -0.15625 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   sepal length (cm) |   sepal width (cm) |   petal length (cm) |   petal width (cm) |
      |---:|-------------:|-------:|--------------------:|-------------------:|--------------------:|-------------------:|
      |  1 |            1 |      0 |                   0 |                  0 |                   0 |                  0 |
      |  2 |            2 |      0 |                   0 |                  0 |                   0 |                  0 |
      |  3 |            3 |      0 |                   0 |                 -0 |                   0 |                  0 |
      |  4 |            4 |      0 |                  -0 |                  0 |                  -0 |                 -0 |
      |  5 |            5 |      0 |                  -0 |                 -0 |                  -0 |                 -0 |
    ''',
  })
# ---
# name: TestClassificationOutputs.test_rf_classifier_independence_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   sepal length (cm) |   sepal width (cm) |   petal length (cm) |   petal width (cm) |
      |---:|-------------:|--------:|--------------------:|-------------------:|--------------------:|-------------------:|
      |  1 |            1 | 0.49474 |             0.00818 |            0.01712 |             0.24533 |            0.23463 |
      |  2 |            2 | 0.49474 |             0.00147 |            0.023   |             0.24363 |            0.23716 |
      |  3 |            3 | 0.49474 |             0.01084 |           -0.00937 |             0.24449 |            0.2293  |
      |  4 |            4 | 0.49474 |            -0.0133  |           -0.00525 |            -0.24321 |           -0.23298 |
      |  5 |            5 | 0.49474 |            -0.00704 |           -0.01951 |            -0.24063 |           -0.22756 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   sepal length (cm) |   sepal width (cm) |   petal length (cm) |   petal width (cm) |
      |---:|-------------:|-------:|--------------------:|-------------------:|--------------------:|-------------------:|
      |  1 |            1 |      0 |                   0 |                  0 |                   0 |                  0 |
      |  2 |            2 |      0 |                   0 |                  0 |                   0 |                  0 |
      |  3 |            3 |      0 |                   0 |                 -0 |                   0 |                  0 |
      |  4 |            4 |      0 |                  -0 |                 -0 |                  -0 |                 -0 |
      |  5 |            5 |      0 |                  -0 |                 -0 |                  -0 |                 -0 |
    ''',
  })
# ---
# name: TestClassificationOutputs.test_rf_classifier_independence_iterative
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   sepal length (cm) |   sepal width (cm) |   petal length (cm) |   petal width (cm) |
      |---:|-------------:|--------:|--------------------:|-------------------:|--------------------:|-------------------:|
      |  1 |            1 | 0.49474 |             0.00663 |            0.01789 |             0.24684 |            0.23389 |
      |  2 |            2 | 0.49474 |             0.00158 |            0.02295 |             0.24432 |            0.23642 |
      |  3 |            3 | 0.49474 |             0.01095 |           -0.00942 |             0.24442 |            0.22932 |
      |  4 |            4 | 0.49474 |            -0.01274 |           -0.00553 |            -0.24384 |           -0.23263 |
      |  5 |            5 | 0.49474 |            -0.00647 |           -0.01979 |            -0.24126 |           -0.22721 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   sepal length (cm) |   sepal width (cm) |   petal length (cm) |   petal width (cm) |
      |---:|-------------:|-------:|--------------------:|-------------------:|--------------------:|-------------------:|
      |  1 |            1 |      0 |             0.04274 |            0.00749 |             0.03163 |            0.03304 |
      |  2 |            2 |      0 |             0.04322 |            0.0084  |             0.03195 |            0.03396 |
      |  3 |            3 |      0 |             0.04352 |            0.00958 |             0.03076 |            0.03222 |
      |  4 |            4 |      0 |             0.04237 |            0.00788 |             0.03043 |            0.03221 |
      |  5 |            5 |      0 |             0.04154 |            0.00738 |             0.03093 |            0.03207 |
    ''',
  })
# ---
